cmake_minimum_required(VERSION 3.15)

set(PROJECT_NAME CuSolver)
project(${PROJECT_NAME} LANGUAGES CXX CUDA)

file(GLOB_RECURSE HEADER_FILES "Include/*.h" "Include/*.cuh")
file(GLOB_RECURSE SOURCE_FILES "Source/*.cpp" "Source/*.cu")

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

set_property(TARGET ${PROJECT_NAME} PROPERTY CUDA_ARCHITECTURES 52 61 75)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Bin) 